--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2018"
 async-raft = "0.5"
 tonic = "0.3"
 prost = "0.6"
-memstore = "0.2.0-alpha.0"
+memstore = "0.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "0.2", features = ["full"] }
@@ -20,6 +20,7 @@ slog = "2.7"
 slog-async = "2.5"
 slog-term = "2.6"
 once_cell = "1.5"
+toml = "0.5"
 
 [build-dependencies]
 tonic-build = "0.3"
